--- a/web/viewer.html
+++ b/web/viewer.html
@@ -7,13 +7,16 @@
   </head>
   <body>
     <h1>Data Viewer</h1>
+    <div id="chartContainer"></div>
     <div id="container"></div>
-    <script src="../common/js_objects/samples.js"></script>
+    <script src="../common/js_objects/features.js"></script>
     <script src="../common/constants.js"></script>
     <script src="../common/utils.js"></script>
     <script src="js/display.js"></script>
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
 
     <script>
+      const { samples, featureNames } = features;
       const groups = utils.groupBy(samples, "student_id");
 
       for (let student_id in groups) {
@@ -21,6 +24,34 @@
         const studentName = samples[0].student_name;
         createRow(container, studentName, samples);
       }
+
+      const options = {
+        width: 400,
+        height: 400,
+        hAxis: { title: featureNames[0] },
+        vAxis: { title: featureNames[1] },
+        legend: { position: "none" },
+        explorer: {
+          maxZoomIn: 0.01,
+          actions: ["dragToZoom", "rightClickToReset"],
+        },
+      };
+
+      google.charts.load("current", { packages: ["corechart", "scatter"] });
+
+      google.charts.setOnLoadCallback(() => {
+        const data = new google.visualization.DataTable();
+        data.addColumn("number", featureNames[0]);
+        data.addColumn("number", featureNames[1]);
+        data.addColumn({ type: "string", role: "style" });
+        data.addRows(samples.map((s) => [...s.point, utils.styles[s.label]]));
+
+        // const chart = new google.visualization.ScatterChart(chartContainer);
+        // chart.draw(data, options);
+
+        const chart = new google.charts.Scatter(chartContainer);
+        chart.draw(data, google.charts.Scatter.convertOptions(options));
+      });
     </script>
   </body>
 </html>
