--- a/web/viewer.html
+++ b/web/viewer.html
@@ -7,12 +7,22 @@
   </head>
   <body>
     <h1>Data Viewer</h1>
+    <div id="inputContainer"></div>
     <div id="chartContainer"></div>
+    <div id="controlPanel">
+      <button onclick="toggleInput()">Toggle Input</button>
+    </div>
     <div id="container"></div>
     <script src="../common/js_objects/features.js"></script>
+
     <script src="../common/constants.js"></script>
     <script src="../common/utils.js"></script>
+    <script src="../common/draw.js"></script>
+    <script src="../common/featureFunctions.js"></script>
+
     <script src="js/display.js"></script>
+    <script src="js/sketchPad.js"></script>
+
     <script src="chart/chart.js"></script>
     <script src="chart/graphics.js"></script>
     <script src="chart/math.js"></script>
@@ -38,6 +48,18 @@
       graphics.generateImages(utils.styles);
 
       const chart = new Chart(chartContainer, samples, options, handleClick);
+
+      const sketchPad = new SketchPad(inputContainer, onDrawingUpdate);
+      sketchPad.canvas.style.cssText +=
+        "outline: 10000px solid rgba(0,0,0,0.7)";
+
+      function onDrawingUpdate(paths) {
+        const point = [
+          featureFunctions.getPathCount(paths),
+          featureFunctions.getPointCount(paths),
+        ];
+        chart.showDynamicPoint(point);
+      }
     </script>
   </body>
 </html>
