--- a/web/viewer.html
+++ b/web/viewer.html
@@ -16,7 +16,8 @@
     </div>
     <div id="container"></div>
     <script src="../common/js_objects/features.js"></script>
-    <script src="../common/js_objects/minMax.js"></script>
+    <!-- <script src="../common/js_objects/minMax.js"></script> -->
+    <script src="../common/js_objects/vars.js"></script>
 
     <script src="../common/constants.js"></script>
     <script src="../common/utils.js"></script>
@@ -58,8 +59,13 @@
 
       function onDrawingUpdate(paths) {
         const functions = featureFunctions.inUse.map((f) => f.function);
-        const point = functions.map((f) => f(paths));
-        utils.normalizePoints([point], minMax);
+        var point = functions.map((f) => f(paths));
+        // utils.normalizePoints([point], minMax);
+
+        console.log("Before STD: ", point);
+        utils.standardizePoints([point], vars);
+        console.log("After STD: ", point);
+
         const { label, nearestSample } = classify(point);
         predictedLabelContainer.innerHTML = "Is it a " + label + "?";
         chart.showDynamicPoint(point, label, nearestSample);
