--- a/web/viewer.html
+++ b/web/viewer.html
@@ -60,22 +60,26 @@
       function onDrawingUpdate(paths) {
         const functions = featureFunctions.inUse.map((f) => f.function);
         var point = functions.map((f) => f(paths));
-        // utils.normalizePoints([point], minMax);
 
-        console.log("Before STD: ", point);
         utils.standardizePoints([point], vars);
-        console.log("After STD: ", point);
 
-        const { label, nearestSample } = classify(point);
+        const { label, nearestSamples } = classify(point);
         predictedLabelContainer.innerHTML = "Is it a " + label + "?";
-        chart.showDynamicPoint(point, label, nearestSample);
+        chart.showDynamicPoint(point, label, nearestSamples);
       }
 
       function classify(point) {
         const samplePoints = samples.map((s) => s.point);
-        const index = utils.getNearest(point, samplePoints);
-        const nearestSample = samples[index];
-        return { label: nearestSample.label, nearestSample };
+        const indices = utils.getNearest(point, samplePoints, 10);
+        const nearestSamples = indices.map((i) => samples[i]);
+        const labels = nearestSamples.map((s) => s.label);
+        const counts = {};
+        for (const label of labels) {
+          counts[label] = counts[label] ? counts[label] + 1 : 1;
+        }
+        const max = Math.max(...Object.values(counts));
+        const label = labels.find((l) => counts[l] == max);
+        return { label, nearestSamples };
       }
     </script>
   </body>
