--- a/web/viewer.html
+++ b/web/viewer.html
@@ -93,10 +93,10 @@
           (l) => weightedCounts[l] === maxWeight
         );
 
-        console.log("Labels:", labels);
-        console.log("Weighted Counts:", weightedCounts);
-        console.log("Max Weight:", maxWeight);
-        console.log("Predicted label:", predictedLabel);
+        // console.log("Labels:", labels);
+        // console.log("Weighted Counts:", weightedCounts);
+        // console.log("Max Weight:", maxWeight);
+        // console.log("Predicted label:", predictedLabel);
 
         return {
           label: predictedLabel,
