update - model evaluation

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -13,9 +13,12 @@
     <div id="chartContainer"></div>
     <div id="controlPanel">
       <button onclick="toggleInput()">Toggle Input</button>
+      <div id="statistics"></div>
     </div>
     <div id="container"></div>
     <script src="../common/js_objects/features.js"></script>
+    <script src="../common/js_objects/training.js"></script>
+    <script src="../common/js_objects/testing.js"></script>
     <!-- <script src="../common/js_objects/minMax.js"></script> -->
     <script src="../common/js_objects/vars.js"></script>
 
@@ -33,10 +36,44 @@
 
     <script>
       const { samples, featureNames } = features;
-      const groups = utils.groupBy(samples, "student_id");
+      const trainingSamples = training.samples;
+      const testingSamples = testing.samples;
 
-      for (let student_id in groups) {
-        const samples = groups[student_id];
+      const k = 50;
+      let correctCount = 0;
+      let totalCount = 0;
+      for (const testSample of testingSamples) {
+        testSample.truth = testSample.label;
+        testSample.label = "?";
+        const { label } = classify(testSample.point);
+        testSample.label = label;
+        testSample.correct = testSample.label == testSample.truth;
+        totalCount++;
+        correctCount += testSample.correct ? 1 : 0;
+      }
+      statistics.innerHTML =
+        "<b>ACCURACY</b><br>" +
+        correctCount +
+        "/" +
+        totalCount +
+        " (" +
+        utils.formatPercent(correctCount / totalCount) +
+        ")";
+
+      const trainingGroups = utils.groupBy(trainingSamples, "student_id");
+      for (let student_id in trainingGroups) {
+        const samples = trainingGroups[student_id];
+        const studentName = samples[0].student_name;
+        createRow(container, studentName, samples);
+      }
+
+      const subtitle = document.createElement("h2");
+      subtitle.innerHTML = "TESTING";
+      container.appendChild(subtitle);
+
+      const testingGroups = utils.groupBy(testingSamples, "student_id");
+      for (let student_id in testingGroups) {
+        const samples = testingGroups[student_id];
         const studentName = samples[0].student_name;
         createRow(container, studentName, samples);
       }
@@ -51,11 +88,17 @@
 
       graphics.generateImages(utils.styles);
 
-      const chart = new Chart(chartContainer, samples, options, handleClick);
+      const chart = new Chart(
+        chartContainer,
+        trainingSamples,
+        options,
+        handleClick
+      );
 
       const sketchPad = new SketchPad(inputContainer, onDrawingUpdate);
       sketchPad.canvas.style.cssText +=
         "outline: 10000px solid rgba(0,0,0,0.7)";
+      toggleInput();
 
       function onDrawingUpdate(paths) {
         const functions = featureFunctions.inUse.map((f) => f.function);
@@ -69,15 +112,11 @@
       }
 
       function classify(point) {
-        const samplePoints = samples.map((s) => s.point);
-        const { indices, distances } = utils.getNearest(
-          point,
-          samplePoints,
-          10
-        );
+        const samplePoints = trainingSamples.map((s) => s.point);
+        const { indices, distances } = utils.getNearest(point, samplePoints, k);
         const nearestSamples = indices.map((i, index) => {
           const weight = 1 / distances[index];
-          return { ...samples[i], weight };
+          return { ...trainingSamples[i], weight };
         });
         const labels = nearestSamples.map((s) => s.label);
         const weightedCounts = {};
