--- a/web/viewer.html
+++ b/web/viewer.html
@@ -20,9 +20,12 @@
     <div id="inputContainer">
       <div id="predictedLabelContainer"></div>
     </div>
-    <div id="chartContainer"></div>
+    <div id="chartContainer">
+      <div id="confusionContainer"></div>
+    </div>
     <div id="controlPanel">
       <button onclick="toggleInput()">Toggle Input</button>
+      <button onclick="toggleOutput()">Toggle Output</button>
       <div id="statistics"></div>
     </div>
     <div id="container"></div>
@@ -43,6 +46,7 @@
     <script src="js/dataCleaner.js"></script>
 
     <script src="chart/chart.js"></script>
+    <script src="chart/confusion.js"></script>
     <script src="chart/graphics.js"></script>
     <script src="chart/math.js"></script>
 
@@ -110,6 +114,13 @@
         testingSamples,
         options,
         handleClick
+      );
+
+      const confusion = new Confusion(
+        confusionContainer,
+        testingSamples,
+        utils.classes,
+        options
       );
 
       // Initializing the Sketch Pad
