optimizing neural networks

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -118,7 +118,7 @@
         transparency: 0.9,
         icon: "image",
         bg: new Image(),
-        hideSamples: true,
+        //hideSamples: true,
       };
       options.bg.src = constants.DECISION_BOUNDARY;
       graphics.generateImages(utils.styles);
