deep neural networks

--- a/web/viewer.html
+++ b/web/viewer.html
@@ -148,7 +148,8 @@
 
       function onDrawingUpdate(paths) {
         const functions = featureFunctions.inUse.map((f) => f.function);
-        point = functions.map((f) => f(paths));
+        //point = functions.map((f) => f(paths));
+        point = functions[0](paths);
         utils.standardizePoints([point], vars);
         // const { label, nearestSamples } = kNN.predict(point);
         const { label, nearestSamples } = mlp.predict(point);
